--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1078,12 +1078,12 @@ div[name="footer"] .navbar {
     margin: 0 -15px;
     margin-bottom: 10px; }
   .atendimento .cliente {
-    max-height: 140px;
-    height: 140px;
+    max-height: 180px;
+    height: 180px;
     overflow-y: auto; }
   .atendimento .info {
-    max-height: 189px;
-    height: 189px;
+    max-height: 180px;
+    height: 180px;
     overflow-y: auto; }
     .atendimento .info .label {
       font-weight: 400; }
@@ -1111,6 +1111,16 @@ div[name="footer"] .navbar {
     .atendimento .status .botao-calendario {
       height: 20px;
       padding: 0 15px; }
+  .atendimento #modal-historico.meu-modal .modal-dialog {
+    width: 600px; }
+  .atendimento #modal-historico.meu-modal .body {
+    height: 400px !important; }
+    .atendimento #modal-historico.meu-modal .body .ui-select-multiple.ui-select-bootstrap {
+      padding: 4px 4px 2px 4px; }
+      .atendimento #modal-historico.meu-modal .body .ui-select-multiple.ui-select-bootstrap input.ui-select-search {
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
 
 .configuracoes .dropdown .dropdown-toggle {
   font-size: 1.5em; }
